force-app/main/default/objects/sked_Staffing_Budget__c/fields/sked_Approved_Slots_Rollup__c.field-meta.xml
<CustomField>
    <fullName>sked_Approved_Slots_Rollup__c</fullName>
    <label>Approved Slots Rollup</label>
    <summaryFilterItems>
        <field>sked_Staffing_Budget_Availability__c.sked_Availability_Status__c</field>
        <operation>contains</operation>
        <value>Approved, Approved From Waitlist</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>sked_Staffing_Budget_Availability__c.sked_Is_Duplicate__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>sked_Staffing_Budget_Availability__c.sked_Staffing_Budget__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>