force-app/main/default/objects/sked_Staffing_Budget__c/fields/sked_Biomed_Collection_Op_Center__c.field-meta.xml
<CustomField>
    <fullName>sked_Biomed_Collection_Op_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Biomed Collection Op (Center)</label>
    <referenceTo>Biomed_Collection_Op_Center__c</referenceTo>
    <relationshipLabel>Staffing Budgets</relationshipLabel>
    <relationshipName>sked_Staffing_Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>