force-app/main/default/objects/sked_Staffing_Budget__c/fields/sked_Convert_to_Standard_On__c.field-meta.xml
<CustomField>
    <fullName>sked_Convert_to_Standard_On__c</fullName>
    <label>Convert to Standard On</label>
    <type>Date</type>
</CustomField>