force-app/main/default/objects/sked_Staffing_Budget__c/fields/sked_District_Name__c.field-meta.xml
<CustomField>
    <fullName>sked_District_Name__c</fullName>
    <formula>sked_Biomed_Collection_Op_Center__r.sked_Territory__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>District Name</label>
    <type>Text</type>
</CustomField>