force-app/main/default/objects/sked_Staffing_Budget__c/fields/sked_Pending_Slots__c.field-meta.xml
<CustomField>
    <fullName>sked_Pending_Slots__c</fullName>
    <label>Pending Slots</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>