force-app/main/default/objects/sked_Staffing_Budget__c/fields/sked_Recurring_Schedule__c.field-meta.xml
<CustomField>
    <fullName>sked_Recurring_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recurring Schedule</label>
    <referenceTo>sked__Recurring_Schedule__c</referenceTo>
    <relationshipLabel>Staffing Budgets</relationshipLabel>
    <relationshipName>sked_Staffing_Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>