force-app/main/default/objects/sked_Staffing_Budget__c/fields/sked_Region__c.field-meta.xml
<CustomField>
    <fullName>sked_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Region</label>
    <referenceTo>sked__Region__c</referenceTo>
    <relationshipLabel>Staffing Budgets</relationshipLabel>
    <relationshipName>sked_Staffing_Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>