force-app/main/default/objects/sked_Staffing_Budget__c/fields/sked_Staffing_Budget_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Staffing_Budget_Date__c</fullName>
    <label>Staffing Budget Date</label>
    <type>Date</type>
</CustomField>