force-app/main/default/objects/sked_Staffing_Budget__c/fields/sked_Total_Slots__c.field-meta.xml
<CustomField>
    <fullName>sked_Total_Slots__c</fullName>
    <label>Total Slots</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>