force-app/main/default/objects/sked_Staffing_Budget__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>sked_Biomed_Collection_Op_Center__c</columns>
    <columns>sked_Recurring_Schedule__c</columns>
    <columns>sked_Staffing_Budget_Date__c</columns>
    <columns>sked_Roles__c</columns>
    <columns>sked_Request_Type__c</columns>
    <columns>sked_Total_Slots__c</columns>
    <columns>sked_Available_Slots__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sked_Staffing_Budget_Date__c</field>
        <operation>equals</operation>
        <value>11/5/2024</value>
    </filters>
    <filters>
        <field>sked_Request_Type__c</field>
        <operation>equals</operation>
        <value>Bidding Period</value>
    </filters>
    <label>All</label>
</ListView>